<resources>
    <string name="app_name">Currency</string>
    <string name="networkLost">Network Lost</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="details">Details</string>
    <string name="switchCurrency">switchCurrency</string>
    <string name="pleaseSelectCurrencies">Please select currencies</string>
    <string name="dataChart">Data chart</string>
    <string name="nightMode">Night mode</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="auto">Auto</string>
    <string name="language">Language</string>
    <string name="ar">ع</string>
    <string name="en">En</string>
    <string name="settings">Settings</string>
    <string name="back">Back</string>
</resources>