<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="java.util.List" />

        <variable
            name="viewModel"
            type="com.task.currencyconversion.ui.convertCurrency.ConversionViewModel" />

        <variable
            name="currencies"
            type="List&lt;com.task.currencyconversion.data.model.Currency>" />

        <variable
            name="req"
            type="com.task.currencyconversion.data.bodyReq.ConversionReq" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ImageButton
            android:id="@+id/settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="16dp"
            android:background="@null"
            android:scaleType="centerCrop"
            android:src="@drawable/round_settings_suggest_24"
            android:padding="16dp"
            android:onClick="@{()->viewModel.navToFragment(@id/settings,req)}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/amaranth_purple"
            android:contentDescription="@string/settings" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout5"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:hint="@string/from"
            android:textColorHint="@color/amaranth_purple"
            android:textSize="16sp"
            app:boxBackgroundColor="@color/off_white"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/amaranth_purple"
            app:layout_constraintEnd_toStartOf="@+id/imageButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/settings">

            <AutoCompleteTextView
                android:id="@+id/fromVal"
                setCurrenciesAdapter="@{currencies}"
                setCurrencyName="@{req.from}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:padding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:background="@null"
            android:padding="15dp"
            android:src="@drawable/convert"
            android:onClick="@{()->viewModel.switchCurrency(req)}"
            app:layout_constraintEnd_toStartOf="@+id/textInputLayout"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/textInputLayout5"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout5"
            android:contentDescription="@string/switchCurrency" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:hint="@string/to"
            android:textColorHint="@color/amaranth_purple"
            android:textSize="16sp"
            app:boxBackgroundColor="@color/off_white"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/amaranth_purple"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageButton"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout5">

            <AutoCompleteTextView
                android:id="@+id/toVal"
                setCurrenciesAdapter="@{currencies}"
                setCurrencyName="@{req.to}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:padding="10dp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayout3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/from"
            android:textColorHint="@color/amaranth_purple"
            android:textSize="16sp"
            app:boxBackgroundColor="@color/off_white"
            app:boxBackgroundMode="outline"
            app:boxCornerRadiusBottomEnd="8dp"
            app:boxCornerRadiusBottomStart="8dp"
            app:boxCornerRadiusTopEnd="8dp"
            app:boxCornerRadiusTopStart="8dp"
            app:boxStrokeColor="@color/amaranth_purple"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout5"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout5"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout5">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fromTextVal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@null"
                android:padding="10dp"
                android:textColor="@color/amaranth_purple"
                android:inputType="numberDecimal"
                android:text='@{req.amount==0?"":String.valueOf(req.amount)}' />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/custom_button2"
            android:hint="@string/to"
            android:gravity="start|center"
            android:paddingStart="16dp"
            android:textColor="@color/amaranth_purple"
            setExchangeRateResult="@{req}"
            app:layout_constraintBottom_toBottomOf="@+id/textInputLayout3"
            app:layout_constraintEnd_toEndOf="@+id/textInputLayout"
            app:layout_constraintStart_toStartOf="@+id/textInputLayout"
            app:layout_constraintTop_toTopOf="@+id/textInputLayout3"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/custom_button"
            android:text="@string/details"
            android:textColor="@color/off_white"
            android:onClick="@{()->viewModel.navToFragment(@id/details,req)}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayout3"
            app:layout_constraintVertical_bias="0.22000003" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
